--- a/app/src/main/res/layout/fragment_compare.xml
+++ b/app/src/main/res/layout/fragment_compare.xml
@@ -9,7 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main"
     android:background="?android:attr/colorBackground">
 
     <ScrollView
@@ -38,72 +37,64 @@
                     android:layout_alignParentStart="true"
                     android:layout_gravity="left">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView2" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="Large Text"
-                        android:id="@+id/textView5" />
+                    <Space
+                        android:layout_width="20px"
+                        android:layout_height="220px"
+                        android:paddingTop="110dp" />
 
                     <Spinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/spinner"
-                        android:paddingTop="20dp"
-                        android:paddingBottom="25dp"
-                        android:paddingRight="10dp" />
+                        android:id="@+id/spinnerL"
+                        android:paddingRight="10dp"
+                        android:touchscreenBlocksFocus="true"
+                        android:gravity="center_vertical" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/imageView2"
-                        />
+                        android:minHeight="140dp"
+                        android:minWidth="140dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView8"
+                        android:text="-"
+                        android:id="@+id/textT1T1"
                         android:paddingTop="25dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView9"
+                        android:text="-"
+                        android:id="@+id/textT1T2"
                         android:paddingTop="25dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView10"
+                        android:text="-"
+                        android:id="@+id/textT1T3"
                         android:paddingTop="25dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView11"
+                        android:text="-"
+                        android:id="@+id/textT1T4"
                         android:paddingTop="25dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView12"
+                        android:text="-"
+                        android:id="@+id/textT1T5"
                         android:paddingTop="25dp" />
                 </LinearLayout>
 
@@ -116,42 +107,31 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/textView3"
-                    android:layout_gravity="right" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Large Text"
-                    android:id="@+id/textView6"
-                    android:layout_gravity="right" />
+                <Space
+                    android:layout_width="20px"
+                    android:layout_height="220px"
+                    android:paddingTop="140dp" />
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/spinner2"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="25dp"
-                    android:paddingLeft="10dp" />
+                    android:id="@+id/spinnerR"
+                    android:paddingLeft="10dp"
+                    android:gravity="center_vertical" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/imageView3"
-                    />
+                    android:minHeight="140dp"
+                    android:minWidth="140dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/textView13"
+                    android:text="-"
+                    android:id="@+id/textT2T1"
                     android:paddingTop="25dp"
                     android:layout_gravity="right" />
 
@@ -159,8 +139,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/textView14"
+                    android:text="-"
+                    android:id="@+id/textT2T2"
                     android:paddingTop="25dp"
                     android:layout_gravity="right" />
 
@@ -168,8 +148,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/textView15"
+                    android:text="-"
+                    android:id="@+id/textT2T3"
                     android:paddingTop="25dp"
                     android:layout_gravity="right" />
 
@@ -177,8 +157,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/textView16"
+                    android:text="-"
+                    android:id="@+id/textT2T4"
                     android:paddingTop="25dp"
                     android:layout_gravity="right" />
 
@@ -186,8 +166,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/textView17"
+                    android:text="-"
+                    android:id="@+id/textT2T5"
                     android:paddingTop="25dp"
                     android:layout_gravity="right" />
             </LinearLayout>
@@ -203,61 +183,63 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/textView4" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Large Text"
-                    android:id="@+id/textView7" />
+                    android:id="@+id/textView7"
+                    android:layout_gravity="center_horizontal"
+                    android:text="GPU Comparison" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
+                    android:text="Choose a GPU"
+                    android:id="@+id/textView4"
+                    android:layout_gravity="center_horizontal" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Parallax"
                     android:id="@+id/textView18"
-                    android:paddingTop="280dp"
-                    android:layout_gravity="right" />
+                    android:paddingTop="200dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
+                    android:text="Gravity"
                     android:id="@+id/textView19"
                     android:paddingTop="25dp"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
+                    android:text="mRender"
                     android:id="@+id/textView20"
                     android:paddingTop="25dp"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
+                    android:text="Price"
                     android:id="@+id/textView21"
                     android:paddingTop="25dp"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
+                    android:text="Max. Power Use"
                     android:id="@+id/textView22"
                     android:paddingTop="25dp"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
