--- a/app/src/main/res/layout/fragment_compare.xml
+++ b/app/src/main/res/layout/fragment_compare.xml
@@ -53,9 +53,11 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/imageView2"
+                        android:id="@+id/imageViewL"
                         android:minHeight="140dp"
-                        android:minWidth="140dp" />
+                        android:minWidth="140dp"
+                        android:maxHeight="140dp"
+                        android:maxWidth="140dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -122,9 +124,11 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageView3"
+                    android:id="@+id/imageViewR"
                     android:minHeight="140dp"
-                    android:minWidth="140dp" />
+                    android:minWidth="140dp"
+                    android:maxHeight="140dp"
+                    android:maxWidth="140dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
